--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-
 .center-me {
     position: fixed;
-    left:33%;
-    top:33%;
-    width:33%;
-};
+    left: 33%;
+    top: 33%;
+    width: 33%;
+}
