--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 $color-pale-purple: rgb(162, 139, 184);
+$color-dark-purple: rgb(133, 77, 185);
 
 .app {
     display: flex;
@@ -17,7 +18,7 @@ $color-pale-purple: rgb(162, 139, 184);
 }
 
 .btn-nav:hover {
-    background-color: $color-pale-purple;
+    background-color: $color-dark-purple;
 }
 
 div.header {
