--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
+
 $color-pale-purple: rgb(162, 139, 184);
 $color-dark-purple: rgb(133, 77, 185);
 
@@ -6,6 +8,11 @@ $color-dark-purple: rgb(133, 77, 185);
     width: 100vw;
     align-items: center;
     flex-direction: column;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.logo {
+    width: 150px;
 }
 
 .btn-nav {
@@ -30,5 +37,8 @@ div.container {
 }
 
 h1 {
-    color: $color-pale-purple;
+    font-size: 1.75em;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 1em;
 }
