reorganize for clarity

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,7 @@ h5 {
     background-color: $gold;
 }
 
-// for SurveyJS
+// for SurveyJS elements
 
 .btn-nav {
     background-color: $color-pale-purple;
