--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,7 @@ h5 {
     border-radius: 4px;
     height: 4px;
     background-color: $gold;
+    transition: width 0.2s ease-out;
 }
 
 // for SurveyJS elements
