--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
+
+$gold: #febd59;
+$lightgray: #eee;
 $color-pale-purple: rgb(162, 139, 184);
 $color-dark-purple: rgb(133, 77, 185);
 
+body {
+    font-family: 'Quicksand', sans-serif;
+}
+
 .app {
+    margin: 0 auto;
     display: flex;
-    width: 100vw;
     align-items: center;
     flex-direction: column;
+    padding: 0 1em 2em 1em;
+    font-size: 16px;
+    width: 100%;
+
+    @media screen and (min-width: 800px) {
+        width: 80%;
+        max-width: 1000px;
+    }
 }
+
+h1 {
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 0;
+}
+
+h5 {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.logo {
+    width: 200px;
+}
+
+.main {
+    width: 100%;
+}
+
+.progress-container {
+    position: relative;
+    width: 100%;
+    margin: 1em 0;
+}
+
+.progress-background {
+    width: 100%;
+    border-radius: 4px;
+    height: 4px;
+    background-color: $lightgray;
+}
+
+.progress-value {
+    position: absolute;
+    border-radius: 4px;
+    height: 4px;
+    background-color: $gold;
+    transition: width 0.2s ease-out;
+}
+
+// for SurveyJS elements
 
 .btn-nav {
     background-color: $color-pale-purple;
@@ -24,11 +82,8 @@ div.header {
 }
 
 div.container {
+    width: 100%;
     background-color: lightblue;
     padding-bottom: 1em;
     margin-bottom: 2em;
-}
-
-h1 {
-    color: $color-pale-purple;
 }
